--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -275,9 +275,9 @@
          -->
     <bool name="config_enableHardwareFlpOverlay" translatable="false">false</bool>
 
-    <!-- Older rotation sensors are not setting event.timestamp correctly. Setting to
+    <!-- Older sensors are not setting event.timestamp correctly. Setting to
          true will use SystemClock.elapsedRealtimeNanos() to set timestamp. -->
-    <bool name="config_useSystemClockforRotationSensor">true</bool>
+    <bool name="config_useSystemClockforSensors">true</bool>
 
     <!-- Indicate whether to allow the device to suspend when the screen is off
          due to the proximity sensor.  This resource should only be set to true
